--- a/src/components/Landing.css
+++ b/src/components/Landing.css
@@ -5,26 +5,28 @@ height: 982px;
 background: linear-gradient(0deg, #F6F2FF, #F6F2FF), #FBFAFF;
 }
 .create-btn{
-display: flex;
-flex-direction: row;
-justify-content: center;
-align-items: center;
-padding: 16px;
-gap: 10px;
-
-position: absolute;
-width: 320px;
-height: 55px;
-left: calc(50% - 320px/2 + 436px);
-top: 622px;
-
-background: linear-gradient(90deg, #8456EC 3.25%, #E87BF8 100%);
-border-radius: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 16px;
+    gap: 10px;
+    position: absolute;
+    width: 320px;
+    height: 55px;
+    left: calc(50% - 320px/2 + 436px);
+    top: 622px;
+    background: linear-gradient(90deg, #8456EC 3.25%, #E87BF8 100%);
+    border-radius: 10px;
+    margin-bottom: 405px;
+    margin-right: 160px;
+   
 }
 
-.create-btn text{
+.create-btn a{
     width: 181px;
 height: 23px;
+text-decoration: none;
 
 font-family: 'Helvetica';
 font-style: normal;
@@ -38,7 +40,7 @@ text-align: right;
 color: #FFFFFF;
 }
 
-span{
+.aside span{
     position: absolute;
 width: 295px;
 height: 74px;
@@ -50,35 +52,32 @@ font-style: normal;
 font-weight: 700;
 font-size: 64px;
 line-height: 74px;
-/* identical to box height */
-
 text-align: right;
-
 background: linear-gradient(90deg, #8456EC 24.2%, #E87BF8 120.46%);
 -webkit-background-clip: text;
 -webkit-text-fill-color: transparent;
 background-clip: text;
-text-fill-color: transparent;
-
 
 }
 .sample-invite{
-position: absolute;
-width: 440px;
-height: 775.69px;
-left: calc(50% - 440px/2 - 366px);
-top: 100px;
-filter: drop-shadow(0px 0px 46.8696px rgba(0, 0, 0, 0.05));
-border-radius: 35.1522px;
+    position: absolute;
+    width: 440px;
+    height: 775.69px;
+    left: calc(50% - 440px/2 - 366px);
+    top: 100px;
+    background: url('https://s3.us-west-2.amazonaws.com/secure.notion-static.com/ea95af2d-7f06-4f25-859c-9069519053a7/Landing_page_image.svg?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45EIPT3X45%2F20221004%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20221004T155755Z&X-Amz-Expires=86400&X-Amz-Signature=8c9f7c77b980d58fbea7bbe3e006c00f0849e4cc5da529d8689cf98293f87be1&X-Amz-SignedHeaders=host&response-content-disposition=filename%20%3D%22Landing%2520page%2520image.svg%22&x-id=GetObject');
+    filter: drop-shadow(0px 0px 46.8696px rgba(0, 0, 0, 0.05));
+    background-repeat: no-repeat;
+    border-radius: 35.1522px;
 }
 
 .aside{
 display: flex;
 flex-direction: column;
+justify-content: space-around;
 align-items: center;
 padding: 0px;
 gap: 16px;
-
 position: absolute;
 width: 321px;
 height: 160px;
@@ -88,7 +87,7 @@ top: 94px;
 }
 
 .aside h1{
-    position: absolute;
+position: absolute;
 width: 573.91px;
 height: 192px;
 left: 0px;
@@ -107,15 +106,16 @@ color: #240D57;
 }
 
 .aside p{
-width: 521px;
-height: 56px;
+    width: 521px;
+    height: 56px;
+    font-family: 'Helvetica';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 28px;
+    text-align: right;
+    color: #4F4F4F;
+    
+    
 
-font-family: 'Helvetica';
-font-style: normal;
-font-weight: 300;
-font-size: 24px;
-line-height: 28px;
-text-align: right;
-
-color: #4F4F4F;
 }
